--- a/nappulapeli-frontend/package.json
+++ b/nappulapeli-frontend/package.json
@@ -12,7 +12,8 @@
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
